--- a/src/components/Table/style.css
+++ b/src/components/Table/style.css
@@ -4,10 +4,26 @@
 
 table {
     margin: 0 auto;
-
-    background-color: gray;
 }
 
 td, th {
     padding: 0.5rem;
+    text-align: center;
+    vertical-align: middle;
+}
+
+thead {
+    font-weight: 600;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #caebff;
+}
+
+td:last-child {
+    padding-right: 1rem;
+}
+
+td:first-child {
+    padding-left: 1rem;
 }
