--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -17,3 +17,18 @@ header input {
     margin-left: auto;
     margin-right: 2rem;
 }
+
+@media (max-width: 768px) {
+    /* For mobile phones: */
+    header {
+        flex-direction: column;
+    }
+
+    header input {
+        margin: 0.5rem auto 1rem auto;
+    }
+
+    header h1 {
+        text-align: center;
+    }
+}
